# movie-chain

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: load_db.py
scripts/old/: ai-clean.py  claude_clean.py  headers.csv  load-to-neo4j.py  process-weirdos.py  quotetest.py  setup_db.py  split_weirdos.py
src/app/: main.py
src/app/static/: script.js  styles.css
src/app/templates/: index.html
