[project]
name = "movie-chain"
version = "0.1.0"
dependencies = [
    "pydantic>=2.6.0",
    "neo4j>=5.26.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "jinja2>=3.1.4",
    "fastapi[standard]>=0.115.4",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    # "pytest>=8.0.0",
    # "httpx>=0.27.0",  # for testing FastAPI
    # "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["app"]
